force-app/main/default/objects/custom_create20__c/custom_create20__c.object-meta.xml
<CustomObject>
    <label>Custom created object20</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects20</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>