force-app/main/default/objects/custom_create20__c/fields/custom_create_20field522__c.field-meta.xml
<CustomField>
    <fullName>custom_create_20field522__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 20field522</label>
    <type>Checkbox</type>
</CustomField>